# ROS2_line_simulation

./: README.md
line_follow/: CMakeLists.txt  package.xml
line_follow/src/: line_tracer.cpp  sub.cpp  video_publisher.cpp
